# hubo-misc

./: .gitignore  README.md
hubo-documentation/: hubo_demo-howto.odt
hubo-gui/: canTool.py  desired.parameters  feedback.py  jointsPanel.py  motorPanel.py  settings.py  util.py
jaemi_urdf/: jaemiHubo.gv  jaemiHubo.urdf  jaemiHubo.xacro
kinematics/: arm.m  arm_5DOF.m  leg_5DOF.m
test-code/: Makefile.am  balance-test.cpp  bodyCOM.h  bodyCOM_test.cpp  legCOM.cpp  one-leg.cpp  sensors.cpp  twoArmFastrak.cpp
test-code/include/: Collision_Checker.h  Fastrak.h  KeyboardInput.h  Teleop.h  impedanceController.h
test-code/src/: Collision_Checker.cpp  Fastrak.cpp  KeyboardInput.cpp  Teleop.cpp  balance-test.cpp  dartTest.cpp  fastrak-arms.cpp  fastrak-balance.cpp  fastrak-dremelIK.cpp  fastrak-legs.cpp  fastrak-oneleg.cpp  fastrak-squat.cpp  fastrak-twoArm.cpp  go-home.cpp  hand.cpp  ik-test.cpp  impCtrl-arms.cpp  impCtrl-legs.cpp  impedanceController-test.cpp  joint-manip-test.cpp  keyboardTest.cpp  legCOM.cpp  legIKTest.cpp  legTraj.cpp  oneLeg.cpp  sensors.cpp  squat.cpp  teleop-arms.cpp  teleop-legs.cpp  tweak.cpp  twoArmFastrak.cpp
urdf/: hubo.xml
